--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -35,12 +35,14 @@
 .ti {
   color: #9cf196;
   font-family: 'Satisfy', cursive;
+  font-size: 2.5rem;
 }
 
 h1 {
+  font-size: 562.5%;
   color: #9cf196;
   width: 10%;
-  margin: 0 auto 0 auto;
+  margin: 50px auto 0 auto;
   font-family: 'Acme', sans-serif;
 }
 
