--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,7 +4,7 @@
   background-color: #131418;
 }
 
- .c1 {
+.c1 {
   position: absolute;
   right: 600px;
   top: 60px;
@@ -17,7 +17,7 @@
 }
 
 .pro-big {
-  height:96px;
+  height: 96px;
   width: 96px;
 }
 
@@ -26,7 +26,7 @@
   width: 400px;
 }
 
-#Adi{
+#Adi {
   height: 300px;
   width: 300px;
   border-radius: 100%;
@@ -36,6 +36,7 @@
   color: #9cf196;
   font-family: 'Satisfy', cursive;
   font-size: 2.5rem;
+  font-weight: normal;
 }
 
 h1 {
@@ -44,6 +45,18 @@ h1 {
   width: 10%;
   margin: 50px auto 0 auto;
   font-family: 'Acme', sans-serif;
+}
+
+h2 {
+  color: #9cf196;
+}
+
+h3 {
+  color: #1fab89;
+}
+
+a {
+  color: #1fab89;
 }
 
 body {
