--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,10 +7,16 @@
 .bottom-container {
   height: 200px;
   background-color: #252525;
+  padding: 50px 0 20px;
+}
+
+.middle_container {
+  margin: 100px 0;
 }
 
 .copywright {
   color:#9cf196;
+  padding-top: 20px;
 }
 
 .My-skills {
@@ -53,6 +59,8 @@
 
 #bio {
   line-height: 2;
+  width: 30%;
+  margin: auto;
 }
 
 #p1 {
@@ -87,6 +95,41 @@
   padding-bottom: 30px;
 }
 
+.end {
+  margin: 40px auto;
+}
+
+.social {
+  width: 2%;
+}
+
+.butn {
+  background: #34d98f;
+  background-image: -webkit-linear-gradient(top, #34d98f, #2bb863);
+  background-image: -moz-linear-gradient(top, #34d98f, #2bb863);
+  background-image: -ms-linear-gradient(top, #34d98f, #2bb863);
+  background-image: -o-linear-gradient(top, #34d98f, #2bb863);
+  background-image: linear-gradient(to bottom, #34d98f, #2bb863);
+  -webkit-border-radius: 30;
+  -moz-border-radius: 30;
+  border-radius: 30px;
+  font-family: Arial;
+  color: #f7f7f7;
+  font-size: 28px;
+  padding: 12px 22px 10px 20px;
+  text-decoration: none;
+}
+
+.butn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+
 h1 {
   font-size: 562.5%;
   color: #9cf196;
@@ -97,19 +140,23 @@ h1 {
 
 h2 {
   color: #9cf196;
+  padding-bottom: 10px;
 }
 
 h3 {
   color: #1fab89;
+  font-size: 2rem;
 }
 
 a {
   color: #1fab89;
+  margin: 10px 20px;
 }
 
 body {
   margin: 0;
   text-align: center;
+  background-color: #f6f6f6;
 }
 
 hr{
@@ -118,4 +165,5 @@ hr{
   border-color: grey;
   border-width: 5px;
   width: 5%;
+  margin: 100px auto;
 }
